[package]
name = "fontquant-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
greencurves = "0.2.1"
itertools = "0.14.0"
kurbo = "0.11.1"
fontations = { workspace = true }
skia-safe = "0.84.0"          # Temporary expedient until kurbo has overlap removal
thiserror = "2.0.12"
unicode-script = "0.5.7"
